# GitIM

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  DESIGN.md  LICENSE  README.md  README.zh-CN.md  TODOS.md  bump.sh  install-from-source.sh  install.sh  publish.sh  release.sh  rust-toolchain.toml
client/: app.ts  (+7 more)
crates/gitim-agent-provider/: Cargo.toml
crates/gitim-agent-provider/src/: claude.rs  codex.rs  error.rs  gemini.rs  hermes.rs  lib.rs  mock.rs  openclaw.rs  opencode.rs  preconditions.rs  prompts.rs  provider.rs  stubs.rs  types.rs  util.rs
crates/gitim-agent-provider/src/acp/: mod.rs  parse.rs
crates/gitim-agent-provider/src/claude/: mod.rs
crates/gitim-agent-provider/src/codex/: mod.rs
crates/gitim-agent-provider/src/cursor/: mod.rs  parse.rs
crates/gitim-agent-provider/src/gemini/: mod.rs
crates/gitim-agent-provider/src/hermes/: mod.rs  prompts.rs
crates/gitim-agent-provider/src/kimi/: mod.rs
crates/gitim-agent-provider/src/mock/: mod.rs
crates/gitim-agent-provider/src/openclaw/: mod.rs
crates/gitim-agent-provider/src/opencode/: mod.rs
crates/gitim-agent-provider/src/pi/: mod.rs
crates/gitim-agent-provider/tests/: claude_integration_test.rs  claude_parse_test.rs  codex_integration_test.rs  factory_test.rs  gemini_parse_test.rs  hermes_integration_test.rs  hermes_parse_test.rs  hermes_usage_semantics_test.rs  kimi_integration_test.rs  openclaw_parse_test.rs  opencode_args_test.rs  opencode_parse_test.rs  pi_integration_test.rs  prompt_test.rs  provider_trait_declarations.rs
crates/gitim-agent-provider/tests/fixtures/: mock_claude.sh  mock_codex.sh  mock_hermes_acp_holds_stdout.sh  mock_kimi_nonzero_exit_after_eof.sh  mock_kimi_set_model_fails.sh  mock_pi_multi_turn_usage.sh
crates/gitim-cli/: Cargo.toml
crates/gitim-cli/src/: main.rs  output.rs
crates/gitim-cli/src/commands/: admin.rs  board.rs  burn.rs  card.rs  channels.rs  cron.rs  dm.rs  flow.rs  labels.rs  messaging.rs  mod.rs  onboard.rs  project.rs  timer.rs  update.rs
crates/gitim-cli/tests/: timer_cli.rs
crates/gitim-core/: Cargo.toml
crates/gitim-core/src/: auth_payload.rs  config_patch.rs  dm.rs  epoch.rs  formatter.rs  identity.rs  lib.rs  link.rs  me_json.rs  mention.rs  parser.rs  preconditions.rs  recipients.rs  responses.rs  timer.rs  validator.rs
crates/gitim-core/src/flow/: mod.rs  parser.rs  run.rs  types.rs  validator.rs
crates/gitim-core/src/types/: board.rs  card.rs  channel.rs  config.rs  cron.rs  handler.rs  labels.rs  link.rs  message.rs  meta.rs  mod.rs  project.rs
crates/gitim-core/src/validator/: compliance.rs  im_rules.rs  mod.rs  read_check.rs
crates/gitim-core/tests/: compliance_test.rs  dm_test.rs  epoch_parse.rs  formatter_test.rs  handler_test.rs  mention_test.rs  parser_test.rs  read_check_test.rs  validator_test.rs
crates/gitim-daemon/: Cargo.toml
crates/gitim-daemon/src/: api.rs  board_handlers.rs  card_handlers.rs  cron_engine.rs  cron_paths.rs  error.rs  flow_handlers.rs  flow_run_handlers.rs  handlers.rs  http.rs  identity.rs  lib.rs  lifecycle.rs  main.rs  onboard.rs  reconcile.rs  server.rs  state.rs  thread_io.rs
crates/gitim-daemon/src/handlers/: channel.rs  cron.rs  depart.rs  dm.rs  labels.rs  mod.rs  poll.rs  project.rs  read.rs  search.rs  send.rs  serde.rs  user.rs
crates/gitim-daemon/tests/: archive_channel.rs  archive_dm_test.rs  archive_user_test.rs  backward_compat.rs  board_test.rs  card_test.rs  commit_test.rs  concurrent_write_test.rs  cron_create_test.rs  cron_departed_test.rs  cron_engine_lifecycle_test.rs  cron_fire_test.rs  cron_lifecycle_test.rs  cron_read_test.rs  cross_clone_burn_test.rs  depart_user_perf.rs  depart_user_test.rs  epoch_gate.rs  epoch_rotation.rs  flow_handlers.rs  flow_run_handlers.rs  handlers_test.rs  indexer_disabled_test.rs  poll_archive_test.rs  poll_cron_test.rs  poll_recipients_test.rs  push_confirm_test.rs  push_test.rs  reconcile.rs  signal_cleanup.rs  status_push_backlog.rs  thread_test.rs  unarchive_channel.rs
crates/gitim-index/: Cargo.toml
crates/gitim-index/src/: lib.rs
crates/gitim-index/tests/: integration_test.rs
crates/gitim-runtime/: Cargo.toml
crates/gitim-runtime/src/: agent.rs  agent_loop.rs  background.rs  claude.rs  context_window.rs  daemon_log.rs  email_propagation.rs  error.rs  fleet.rs  git_config.rs  github.rs  gitignore.rs  hermes_profile.rs  http.rs  lib.rs  model_catalog.rs  poller.rs  preconditions.rs  preflight.rs  saturation_log.rs  saturation_sampler.rs  slug.rs  state.rs  token_propagation.rs  tool_path.rs  update.rs  url_redact.rs  usage_log.rs  user_config.rs  workspace.rs
crates/gitim-runtime/tests/: agent_loop.rs  agent_loop_routing.rs  agent_patch.rs  background_detach.rs  burn_test.rs  claude.rs  cli_add_agent.rs  cli_burn_agent.rs  cli_fleet.rs  cli_list_agents.rs  cli_preflight.rs  cli_status.rs  cli_subprocess_smoke.rs  cli_update_agent.rs  cli_workspaces.rs  config_schema.rs  coordinator_prompt.rs  cron_http.rs  cron_timeline_http.rs  email_propagation.rs  fleet_http.rs  flow_http.rs  git_init_local.rs  github_add_agent.rs  github_api.rs  github_init.rs  gitignore_init.rs  hermes_llm_e2e.rs  hermes_llm_fetch.rs  hermes_llm_http.rs  hermes_llm_introspect.rs  hermes_profile.rs  http_im.rs  http_projects.rs  http_workspaces.rs  idle_exit.rs  model_catalog.rs  multi_workspace.rs  persistence.rs  poller.rs  (+22 more)
crates/gitim-sync/: Cargo.toml
crates/gitim-sync/src/: conflict.rs  git.rs  lib.rs  renumber.rs  rotate.rs  sync_loop.rs  test_util.rs  url_redact.rs  watcher.rs
crates/gitim-sync/tests/: commit_only_test.rs  conflict_test.rs  empty_remote_push.rs  git_ops_test.rs  non_thread_rebase.rs  onboard_test.rs  poll_test.rs  renumber_test.rs  rotate_test.rs  sync_auth_circuit.rs  sync_e2e_test.rs  url_redact.rs
crates/gitim-updater/: Cargo.toml
crates/gitim-updater/src/: lib.rs
crates/gitim-updater/tests/: download_replace.rs  helpers.rs
crates/gitim-wasm/: Cargo.toml
crates/gitim-wasm/pkg/: gitim_wasm.d.ts  gitim_wasm.js  gitim_wasm_bg.wasm  gitim_wasm_bg.wasm.d.ts  package.json
crates/gitim-wasm/src/: lib.rs
(+841 files in other folders)
