[workspace]
members = ["crates/gitim-core", "crates/gitim-daemon", "crates/gitim-sync", "crates/gitim-index", "crates/gitim-client", "crates/gitim-cli", "crates/gitim-agent-provider", "crates/gitim-runtime", "crates/gitim-updater", "crates/gitim-wasm"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
sha2 = "0.10"
hex = "0.4"
croner = "3"
chrono-tz = "0.10"
