[package]
name = "gitim-agent-provider"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
tokio-util = { workspace = true }

[dev-dependencies]
tokio.workspace = true
pretty_assertions = "1"

[lints]
workspace = true
