[package]
name = "gitim-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gitim"
path = "src/main.rs"

[dependencies]
gitim-client = { path = "../gitim-client" }
gitim-core = { path = "../gitim-core" }
gitim-updater = { path = "../gitim-updater" }
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
serde_json.workspace = true
regex.workspace = true
tempfile = "3"

[dev-dependencies]
serde_yaml.workspace = true
