[package]
name = "gitim-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
thiserror.workspace = true
chrono.workspace = true
chrono-tz = { workspace = true }
croner = { workspace = true }
fs2 = "0.4"
getrandom = { version = "0.2", features = ["std"] }
hex.workspace = true
humantime = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[lints]
workspace = true
