[package]
name = "gitim-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
thiserror.workspace = true
chrono.workspace = true
chrono-tz = { workspace = true }
croner = { workspace = true }
getrandom = { version = "0.2", features = ["std"] }
hex.workspace = true
humantime = "2"
tempfile = "3"
tracing.workspace = true

# `fs2` is a thin libc wrapper for advisory file locking; no wasm32 backend
# exists. The timer module that uses it is gated `#[cfg(not(target_arch =
# "wasm32"))]` in lib.rs, and this dep is gated the same way to keep the
# wasm-pack build (gitim-wasm → gitim-sync → gitim-core) green.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = "0.4"

# `preconditions::random_bytes` (used by flow run-id generation) is NOT
# wasm-gated, so `getrandom` must link on wasm32. getrandom 0.2 has no OS
# entropy backend for `wasm32-unknown-unknown` unless the `js` feature is on
# (routes to `crypto.getRandomValues`). Cargo unions features across targets,
# so native keeps `std` (above) and wasm additionally gets `js`. Without this
# `wasm-pack build` fails to compile getrandom.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
