[package]
name = "gitim-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
gitim-core = { path = "../gitim-core" }
gitim-sync = { path = "../gitim-sync" }
libc = "0.2"
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"
tower = "0.5"
hyper = "1"
hyper-util = "0.1"
tokio-stream = "0.1"
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
