[package]
name = "gitim-index"
version.workspace = true
edition.workspace = true

[dependencies]
gitim-core = { path = "../gitim-core" }
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
