[package]
name = "gitim-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gitim-client = { path = "../gitim-client" }
gitim-agent-provider = { path = "../gitim-agent-provider" }
gitim-sync = { path = "../gitim-sync" }
gitim-updater = { path = "../gitim-updater" }
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "6"
axum = "0.8"
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
xattr = "1"

[[bin]]
name = "gitim-runtime"
path = "src/bin/runtime.rs"

# Test-only stand-in for `gitim-runtime`. The update E2E tarball is built
# around copies of this binary; the `CARGO_BIN_EXE_fake-gitim-runtime` env var
# lets the test locate the compiled artifact without hard-coding a target path.
#
# `required-features` / guards don't exist for plain bins, so we rely on the
# bin not being referenced from production code. It is compiled whenever the
# crate is built — acceptable cost for a ~70-line support file.
[[bin]]
name = "fake-gitim-runtime"
path = "tests/support/fake_runtime.rs"
test = false
doc = false
bench = false

[dev-dependencies]
serial_test = "3"
mockito = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
xattr = "1"
