[package]
name = "gitim-sync"
version.workspace = true
edition.workspace = true

[dependencies]
gitim-core = { path = "../gitim-core" }
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
notify = "7"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
serde_yaml.workspace = true
