[package]
name = "gitim-sync"
version.workspace = true
edition.workspace = true

[dependencies]
gitim-core = { path = "../gitim-core" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
notify = "7"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
serde_yaml.workspace = true
