[package]
name = "gitim-updater"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
flate2 = "1"
tar = "0.4"
thiserror.workspace = true
tokio.workspace = true
serde_json.workspace = true
