[package]
name = "gitim-updater"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror.workspace = true
flate2 = "1"
tar = "0.4"
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
