[package]
name = "gitim-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gitim-core = { path = "../gitim-core" }
gitim-sync = { path = "../gitim-sync" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
